added config options

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <!-- <eye-con name='Notes' type='txt'></eye-con> -->
       <eye-con name='Explorer' type='exe'></eye-con>
       <eye-con name='Calendar' type='exe'></eye-con>
+      <eye-con name='WifiConfig' id='wifi' type='exe'></eye-con>
     </div>
     <div id='windows'>
     </div>
